# task_oriented_grasping

./: .gitignore  .repos  CLAUDE.md
src/moveit_playground/: CMakeLists.txt  package.xml
src/moveit_playground/src/: pose_goal.cpp
src/peg_in_hole_description/: CMakeLists.txt  package.xml
src/peg_in_hole_description/config/: controllers.yaml  moveit_controllers.yaml
src/peg_in_hole_description/srdf/: ur5e_robotiq85.srdf.xacro
src/peg_in_hole_description/urdf/: ur5e_robotiq85.urdf.xacro
src/peg_in_hole_task/: package.xml  setup.cfg  setup.py
src/peg_in_hole_task/config/: task_params.yaml
src/peg_in_hole_task/launch/: ur_with_task.launch.py
src/peg_in_hole_task/models/hole_block/: model.config  model.sdf
src/peg_in_hole_task/models/peg/: model.config  model.sdf
src/peg_in_hole_task/peg_in_hole_task/: grasp_and_insert.py  spawn_task_objects.py
src/peg_in_hole_task/worlds/: peg_in_hole.world
