<?xml version="1.0"?>
<package format="3">
  <name>peg_in_hole_description</name>
  <version>0.0.1</version>
  <description>Robot description for UR5e + Robotiq 2F-85 for peg-in-hole task</description>
  <maintainer email="markus.gk@outlook.com">Markus</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ur_description</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
